<?xml version="1.0"?>
<package>
  <name>primes_tutorial</name>
  <version>1.0.0</version>
  <description>The primes_tutorial package</description>
  <maintainer email="sandro.young@mail.utoronto.ca">Sandro Young</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
  </export>
</package>
